--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
             <div class="header-title">Story Collection</div>
             <div class="header-subtitle">Sharing your life stories with AI</div>
             <div class="header-actions">
+                <div class="model-selector">
+                    <label for="modelSelect">Claude Model:</label>
+                    <select id="modelSelect" class="model-dropdown">
+                        <option value="claude-opus-4-20250514">Claude Opus 4 (Most Capable)</option>
+                        <option value="claude-sonnet-4-20250514">Claude Sonnet 4 (High Performance)</option>
+                        <option value="claude-3-7-sonnet-20250219">Claude 3.7 Sonnet (Extended Thinking)</option>
+                        <option value="claude-3-5-sonnet-20241022" selected>Claude 3.5 Sonnet (Intelligent)</option>
+                        <option value="claude-3-5-haiku-20241022">Claude 3.5 Haiku (Fastest)</option>
+                        <option value="claude-3-haiku-20240307">Claude 3 Haiku (Quick & Compact)</option>
+                    </select>
+                </div>
                 <div class="agent-toggle-container">
                     <label class="toggle-switch" title="Show/hide AI agent activity and metadata">
                         <input type="checkbox" id="agent-metadata-toggle" checked>
