Clean up UI controls - hide Memory Keeper toggle
UI improvements for cleaner interface:

1. HIDDEN MEMORY KEEPER TOGGLE:
   - Commented out Memory Keeper toggle in HTML
   - Updated JavaScript to always show Memory Keeper section
   - Removed toggle event handling since control is hidden
   - Memory display now permanently visible for better UX

2. SIMPLIFIED HEADER CONTROLS:
   - Only Logging Mode toggle remains visible
   - Cleaner, less cluttered interface
   - Memory Keeper functionality still works, just always on

This addresses user feedback about hiding the Memory Keeper toggle while maintaining all extraction functionality. The interface is now more streamlined with just the essential Logging Mode control visible.

--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
                 </div>
                 <div class="controls">
                     <div class="toggle-group">
-                        <label class="toggle-label">
+                        <!-- Memory Keeper toggle hidden for cleaner UI -->
+                        <!-- <label class="toggle-label">
                             <input type="checkbox" id="memory-display-toggle" checked>
                             <span class="toggle-slider"></span>
                             Memory Keeper
-                        </label>
+                        </label> -->
                         <label class="toggle-label">
                             <input type="checkbox" id="logging-mode-toggle">
                             <span class="toggle-slider"></span>
