Add password protection for testing deployment
Complete password protection system for secure testing:

1. AUTHENTICATION SYSTEM:
   - Created auth.html with professional login page
   - Multiple valid access codes: StoryTest2025, VibeAgents2025, MemoryKeeper2025
   - Session-based authentication using sessionStorage
   - Auto-redirect unauthenticated users to login page

2. UI INTEGRATION:
   - Added auth check to index.html (redirects if not authenticated)
   - Added logout button in header with red styling
   - Logout function clears session and redirects to auth page
   - Clean, professional authentication flow

3. SECURITY FEATURES:
   - Session expires when browser closes (sessionStorage)
   - Multiple access codes for different testers
   - Clean error handling for invalid codes
   - Auto-focus on password field for better UX

4. DEPLOYMENT READY:
   - Updated netlify.toml for proper auth.html routing
   - Maintains all existing functionality while adding protection
   - Perfect for concept testing with stakeholders

This provides secure access control for testing while maintaining the full story collection functionality. Testers can use any of the three access codes to enter the application.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
     <meta property="twitter:description" content="Share your life stories with AI - Collaborator and Memory Keeper agents help capture and organize your memories">
     
     <link rel="stylesheet" href="css/styles.css">
+    
+    <!-- Simple Auth Check -->
+    <script>
+        // Check authentication on page load
+        if (!sessionStorage.getItem('storyAuth')) {
+            window.location.href = '/auth.html';
+        }
+    </script>
 </head>
 <body>
     <div class="chat-container">
@@ -54,6 +62,7 @@
                     </div>
                     <button class="action-btn" id="new-story-btn" style="margin-left: 15px;">New Story</button>
                     <button class="action-btn" id="export-btn" style="margin-left: 10px;">Export</button>
+                    <button class="action-btn" id="logout-btn" style="margin-left: 10px; background: rgba(231,76,60,0.8);">Logout</button>
                 </div>
             </div>
         </div>
