Add privacy measures for testing deployment
Simple privacy protection for free tier:

1. ROBOTS.TXT:
   - Disallow all crawlers from indexing the site
   - Clear message that this is a private testing site
   - Prevents search engine discovery

2. NOINDEX META TAGS:
   - Added comprehensive robots meta tag with noindex, nofollow, noarchive, nosnippet
   - Prevents any search engine indexing or caching
   - Keeps the site private during concept testing

These measures ensure the site stays private during testing without requiring paid Netlify features. The site will be accessible to testers via direct URL but won't appear in search results.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Story Collection - AI Agents for Capturing Life Stories">
+    <meta name="robots" content="noindex, nofollow, noarchive, nosnippet">
     <title>Story Collection - AI Agents for Capturing Life Stories</title>
     
     <!-- Open Graph / Facebook -->
