feat: Complete splash page redesign with video integration and hover tooltips
UI/UX Improvements:
- Integrate AI-generated background video (assets/videos/background.mp4)
- Redesign login box: more transparent (85% transparency) and compact (550px width)
- Remove feature descriptions from layout for cleaner design
- Add interactive hover tooltips for feature information
- Implement smooth animations and visual feedback on hover

Video Integration:
- Add background video with autoplay, loop, and proper fallbacks
- Optimize video overlay (20% opacity) to showcase video content
- Enhanced video loading with error handling and event listeners
- Responsive video background with proper scaling

Layout Redesign:
- Widen content card to fit all three features properly
- Convert to compact 3-column grid layout with reduced spacing
- Fix overflow issues with third feature column
- Streamlined padding and margins for better proportions

Interactive Features:
- Hover tooltips with dark backgrounds and smooth transitions
- Feature boxes lift and brighten on hover for visual feedback
- Cursor pointer indication for interactive elements
- Professional 0.3s animations throughout

Text Readability:
- White text with text shadows for video background contrast
- Enhanced feature headings with proper shadow effects
- Optimized font sizes and weights for compact layout
- Improved visual hierarchy and accessibility

Technical:
- Enhanced JavaScript video setup with robust error handling
- CSS glassmorphism effects with backdrop blur
- Responsive design maintained across all screen sizes
- Clean, maintainable code structure

--- a/login.html
+++ b/login.html
@@ -30,8 +30,9 @@
     <!-- Background Video Container -->
     <div class="video-background">
         <video id="background-video" autoplay muted loop playsinline>
-            <!-- Video source will be added when you provide the video -->
-            <!-- <source src="assets/background-video.mp4" type="video/mp4"> -->
+            <source src="assets/videos/background.mp4" type="video/mp4">
+            <!-- Fallback for browsers that don't support video -->
+            Your browser does not support the video tag.
         </video>
         <div class="video-overlay"></div>
     </div>
