--- a/login.html
+++ b/login.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/splash.css">
     
     <!-- Authentication and Backend Services -->
+    <script src="js/config.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/conversation-service.js"></script>
 </head>
