auth: fix splash↔chat redirect loop\n\n- chat (js/app.js): rely only on onAuthStateChanged; remove immediate isAuthenticated check; show 'Checking sign-in...'\n- firebase (js/firebase-config.js): immediately invoke auth callbacks with currentUser (incl. null) to provide stable initial signal\n- splash/chat minor related tweaks and docs

--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
     <!-- Expose environment before config -->
     <script src="/env.js"></script>
     <script src="js/config.js"></script>
+    <!-- Firebase client for splash authentication -->
+    <script type="module" src="js/firebase-config.js"></script>
     <script src="js/splash.js"></script>
 </body>
 </html>
