--- a/chat.html
+++ b/chat.html
@@ -94,13 +94,6 @@
     </header>
 
     <div class="chat-container">
-        <!-- Authentication Required Message -->
-        <div class="auth-required hidden" id="auth-required">
-            <h3>🔒 Sign In Required</h3>
-            <p>Please sign in to access your personal story collection and chat with our AI agents.</p>
-            <button class="auth-btn primary" id="auth-required-signin">Sign In</button>
-        </div>
-
         <div class="main-content" id="chat-container">
             <div class="chat-section">
                 <div class="chat-collab-header" aria-label="Collaborator chat header">
@@ -198,9 +191,8 @@
 
 
 
-    <!-- Firebase and Authentication Scripts -->
+    <!-- Firebase and App Scripts -->
     <script type="module" src="js/firebase-config.js"></script>
-    <script src="js/auth-ui.js"></script>
     <script src="js/app-header.js"></script>
     <script src="js/app.js"></script>
 </body>
