--- a/chat.html
+++ b/chat.html
@@ -198,6 +198,7 @@
 
 
     <!-- Firebase and App Scripts -->
+    <script src="js/onboarding.js"></script>
     <script src="js/app-header.js"></script>
     <script src="js/app.js"></script>
 </body>
