--- a/chat.html
+++ b/chat.html
@@ -40,6 +40,17 @@
 </head>
 <body hidden>
     <!-- App Header -->
+    <!-- App Loader Overlay -->
+    <div id="app-loader" style="position:fixed; inset:0; background:#0b1020; color:#e2e8f0; display:flex; align-items:center; justify-content:center; z-index:9999;">
+        <div style="text-align:center; max-width:480px; padding:24px;">
+            <div style="font-size:18px; margin-bottom:8px;">Loading your memories…</div>
+            <div style="opacity:0.85; font-size:14px;">Securing your session, fetching preferences, and preparing your stories.</div>
+            <div style="margin-top:16px; display:inline-block; width:40px; height:40px; border:4px solid #334155; border-top-color:#93c5fd; border-radius:50%; animation:spin 1s linear infinite;"></div>
+            <style>
+                @keyframes spin { to { transform: rotate(360deg); } }
+            </style>
+        </div>
+    </div>
     <header id="app-header" class="app-header">
         <div class="app-header-container">
             <div class="app-header-content">
@@ -137,6 +148,13 @@
                 </div>
                 
                 <div class="memory-content">
+                    <!-- Narrator Section -->
+                    <div class="memory-section">
+                        <h4>Narrator</h4>
+                        <div class="memory-items" id="memory-narrator">
+                            <div class="memory-placeholder">No name set yet</div>
+                        </div>
+                    </div>
                     <div class="memory-section">
                         <h4>People</h4>
                         <div class="memory-items" id="memory-people">
