--- a/chat.html
+++ b/chat.html
@@ -40,15 +40,12 @@
 </head>
 <body hidden>
     <!-- App Header -->
-    <!-- App Loader Overlay -->
-    <div id="app-loader" style="position:fixed; inset:0; background:#0b1020; color:#e2e8f0; display:flex; align-items:center; justify-content:center; z-index:9999;">
-        <div style="text-align:center; max-width:480px; padding:24px;">
-            <div style="font-size:18px; margin-bottom:8px;">Loading your memories…</div>
-            <div style="opacity:0.85; font-size:14px;">Securing your session, fetching preferences, and preparing your stories.</div>
-            <div style="margin-top:16px; display:inline-block; width:40px; height:40px; border:4px solid #334155; border-top-color:#93c5fd; border-radius:50%; animation:spin 1s linear infinite;"></div>
-            <style>
-                @keyframes spin { to { transform: rotate(360deg); } }
-            </style>
+    <!-- App Loader Overlay (CSP-compliant: uses classes) -->
+    <div id="app-loader" class="app-loader">
+        <div class="app-loader-inner">
+            <div class="app-loader-title">Loading your memories…</div>
+            <div class="app-loader-subtitle">Securing your session, fetching preferences, and preparing your stories.</div>
+            <div class="app-loader-spinner" aria-hidden="true"></div>
         </div>
     </div>
     <header id="app-header" class="app-header">
